--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             publicKey: "kGPFPWjqp-T9f7Dml", 
             });
         })();
-        
+
     </script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKES0PQ8B"></script>
@@ -88,8 +88,8 @@
     <header id="header-nav">
         <div class="navbar navbar-dark navbar-expand-lg">
             <div class="container pt-1 pb-1">
-                <img src="/images/JK2_imoveis_logo.webp" alt="J2K Imóveis Logo" id="brand-logo-2" draggable="false" class="pb-1">
-                <img src="/images/logo.webp" alt="J2K Imóveis Logo" id="brand-logo" draggable="false" class="pb-1">
+                <img src="#" alt="J2K Imóveis Logo" id="brand-logo-2" draggable="false" class="pb-1">
+                <img src="#" alt="J2K Imóveis Logo" id="brand-logo" draggable="false" class="pb-1">
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-dropdown">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -119,15 +119,15 @@
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
                 <div class="container d-flex flex-column container-hero-left animation-up">
-                    <h2 class="motto mx-5 text h1">Encontre o seu <span><strong>Lar</strong></span>.</h2>
+                    <h2 class="motto mx-5 text h1">.<span><strong>.</strong></span>.</h2>
                     <p class="mx-5">
-                        Com a ajuda da J2K Imóveis você encontra o <strong>lar perfeito</strong> para atender todas as suas necessidades. Entre em contato com a J2K agora mesmo.
+                        .
                     </p>
-                    <a href="#contact" draggable="false" class="btn-link"><button class="btn btn-hero btn-block shadow-sm mx-5">Comece agora</button></a>
+                    <a href="#contact" draggable="false" class="btn-link"><button class="btn btn-hero btn-block shadow-sm mx-5">Contate-nos</button></a>
                 </div>
                 <!--Right Content-->
                 <div class="container d-flex justify-content-center">
-                    <!-- <img src="./images/JK2_imoveis_logo.webp" draggable="false" alt="J2K Imóveis Logo" class="mx-5 mt-5 logo-hero-section"> -->
+                    <!-- <img src="#" draggable="false" alt="" class="mx-5 mt-5 logo-hero-section"> -->
                 </div>
             </div>
         </main>
