--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <header id="header-nav">
         <div class="navbar navbar-dark navbar-expand-lg">
             <div class="container pt-1 pb-1">
-                <img src="#" alt="J2K Imóveis Logo" id="brand-logo-2" draggable="false" class="pb-1">
-                <img src="#" alt="J2K Imóveis Logo" id="brand-logo" draggable="false" class="pb-1">
+                <img src="#" alt="Logo do Cartório Ribeirão da Ilha" id="brand-logo-2" draggable="false" class="pb-1">
+                <img src="#" alt="Logo do Cartório Ribeirão da Ilha" id="brand-logo" draggable="false" class="pb-1">
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-dropdown">
                     <span class="navbar-toggler-icon"></span>
                 </button>
