--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="custom-alert-content">
             <span class="close">&times;</span>
             <div class="d-flex flex-column justify-content-center">
-                <img src="/images/JK2_imoveis_logo.webp" alt="J2K Imóveis Logo" id="brand-logo-popup" draggable="false" class="pb-1 mb-3">
+                <img src="#" alt="Logo do Cartório Ribeirão da Ilha" id="brand-logo-popup" draggable="false" class="pb-1 mb-3">
                 <p id="alertMessage">
                 </p>
             </div>
