--- a/index.html
+++ b/index.html
@@ -56,15 +56,7 @@
 
     </script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YKES0PQ8B"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-2YKES0PQ8B');
     </script>
-
     <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA" /> <!--Google Search Console verification for indexing-->
 </head>
 
@@ -102,7 +94,13 @@
                             <a href="#about" class="nav-link">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#contact" class="nav-link">Buscar</a>
+                            <a href="#team" class="nav-link">Titular</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#media" class="nav-link">Mídia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#contact" class="nav-link">Contato</a>
                         </li>
                         <li class="nav-item">
                             <a href="#faq" class="nav-link">FAQ</a>
@@ -148,8 +146,19 @@
             </div>
         </section>
 
-        <section id="cartorando">
-            <div class="container banner d-sm-block d-lg-flex pt-5 pb-5"></div>
+        <!--MEET THE OWNER-->
+        <section id="team">
+            <!--Section SVG Divider-->
+            <div class="custom-shape-divider-top-1727206977">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill-owner"></path>
+                </svg>
+            </div>
+            <div class="container banner d-sm-block d-md-flex d-lg-flex pt-5 pb-5">
+                <!--Image-->
+                <div class="container d-flex flex-column container-hero-left mt-5 pt-5 mb-5">
+                    <img src="./src/img/titular.png" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-about-left">
+                </div>
                 <!--Content-->
                 <div class="container container-right-about mt-5 mb-5">
                     <h2 class="motto text text-center h2 animation-up">Conheça o Titular do Cartório Ribeirão da Ilha</h2>
@@ -160,9 +169,23 @@
                         commodi sint et ullam, nisi, perspiciatis doloribus.
                     </p>
                 </div>
-                <div class="container d-flex flex-column container-hero-left mt-5 mb-5">
-                    <img src="#" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-about-left">
-                </div>
+            </div>
+        </section>
+
+        <!--MEDIA SECTION-->
+        <section id="media" class="">
+            <!--Section SVG Divider-->
+            <div class="custom-shape-divider-top-1727206977">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
+            <div class="container banner d-block animation-up">
+                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Mídias</h2>
+                <p class="text text-center pb-3 animation-down">
+                    Confira alguns vídeos de passo a passo que você pode achar útil.
+                </p>
+                
             </div>
         </section>
 
@@ -177,10 +200,22 @@
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
                 <div class="container d-flex flex-column container-hero-left animation-up">
-                    <img src="#" alt="Como podemos ajudar?" id="brand-logo-3" draggable="false" class="pb-1 mb-3 mt-5">
-                    <h2 class="motto mx-5 text text-center h2">Como podemos ajudá-lo?</h2>
+                    <img src="#" alt="Ícone de ajuda" id="brand-logo-3" draggable="false" class="pb-1 mb-3 mt-5">
+                    <h2 class="motto mx-5 text text-center h2">Como nos encontrar?</h2>
                     <p class="mx-5 text text-center">
-                        Preencha o formulário e envie-nos uma mensagem. O Cartório Ribeirão da Ilha retornará assim que possível.
+                        Veja como entrar em contato com o Cartório Ribeirão da Ilha.<br><br>
+                        <ul>
+                            <li>
+                                Endereço físico: Rua João Sallum, 215, Florianópolis-SC, CEP:88047-668. <br>
+                                Atendimento: De segunda a sexta, das 09:00h às 18:00h.
+                            </li><br>
+                            <li>
+                                Através do nosso <a href="https://api.whatsapp.com/send/?phone=%2B554833643902&text&type=phone_number&app_absent=0" target="_blank" class="text-reset">Whatsapp</a>.
+                            </li><br>
+                            <li>
+                                Preenchendo o formulário e enviando-nos uma mensagem. O Cartório Ribeirão da Ilha retornará assim que possível.
+                            </li>
+                        </ul>
                     </p>
                 </div>
                 <!--Right Content-->
@@ -367,8 +402,6 @@
                         <p>
                             <a href="https://api.whatsapp.com/send/?phone=%2B554833643902&text&type=phone_number&app_absent=0" target="_blank" class="text-reset">Whatsapp</a>
                         </p>
-
-                        
                     </div>
                     <!--Section Column-->
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -422,7 +455,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script> <!--JQuery-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> 
         <script src="./js plugins/jquery.mask.min.js"></script> <!--Plugin de máscara para validar telefones/email-->
-        <script src="/script.js"></script>
-        <script type="text/javascript" src="emailjs.js"></script>
+        <script src="./build/script.js"></script>
+        <script type="text/javascript" src="./build/emailjs.js"></script>
 </body>
 </html>
