--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <nav class="collapse navbar-collapse justify-content-end" id="menu-dropdown">
                     <ul class="nav navbar-nav nav-pills">
                         <li class="nav-item">
-                            <a href="#homespy" class="nav-link active">Home</a>
+                            <a href="#home" class="nav-link active">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#about" class="nav-link">Sobre</a>
@@ -114,12 +114,12 @@
     </header>
     
     <div data-bs-spy="scroll" data-bs-target="#header-nav">
-        <div id="homespy"></div>
+        <div id="home"></div>
         <!--HERO SECTION-->
-        <main id="home" class="">
+        <main id="homepage" class="">
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
-                <div class="container d-block container-hero-left animation-up motto-div">
+                <div class="container d-flex flex-column container-hero-left animation-up motto-div">
                     <img src="./src/img/logofullwebp.webp" draggable="false" alt="Logo do Cartório Ribeirão da Ilha" class="mx-5 mt-5 mb-3 logo-hero-section">
                     <h2 class="motto mx-5 text h1">Agilidade e <span><strong>transparência</strong></span>.</h2>
                     <p class="mx-5 p-hero">
@@ -134,7 +134,8 @@
         <section id="about">
             <div class="container banner d-block pt-5 pb-5">
                 <!--Content-->
-                <div class="container container-right-about mt-5 mb-5">
+                <div class="container container-right-about mt-3 mb-5 d-flex flex-column">
+                    <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-2">
                     <h2 class="motto text text-center h2 animation-up">Sobre o Cartório Ribeirão da Ilha</h2>
                     <p class="mx-5 text text center animation-up">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit optio, modi rerum amet incidunt numquam hic ipsa praesentium ullam quis? 
@@ -143,6 +144,33 @@
                         commodi sint et ullam, nisi, perspiciatis doloribus. Dicta odit facere sint sapiente illum mollitia minima blanditiis asperiores delectus adipisci praesentium maxime recusandae repudiandae, 
                         consectetur voluptates nam soluta eum dolorum quidem?
                     </p>
+                </div>
+
+                <div id="carousel-images" class="carousel carousel-fade slide" data-bs-ride="carousel">
+                    <div class="carousel-inner" id="carousel-about">
+                        <div data-bs-interval="4500" class="carousel-item active">
+                            <img class="d-block w-100 image-carousel1" src="./src/img/carousel1.webp" loading="lazy" alt="Fachada do Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                        <div data-bs-interval="4500" class="carousel-item">
+                            <img class="d-block w-100 image-carousel2" src="./src/img/carousel2.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                        <div data-bs-interval="4500" class="carousel-item">
+                            <img class="d-block w-100 image-carousel3" src="./src/img/carousel3.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                        <div data-bs-interval="4500" class="carousel-item">
+                            <img class="d-block w-100 image-carousel4" src="./src/img/carousel4.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                        <div data-bs-interval="4500" class="carousel-item">
+                            <img class="d-block w-100 image-carousel5" src="./src/img/carousel5.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                    </div>
+                    <div class="carousel-indicators">
+                        <button type="button" title="Primeira imagem" class="active" data-bs-target="#carousel-images" data-bs-slide-to="0"></button>
+                        <button type="button" title="Segunda imagem" data-bs-target="#carousel-images" data-bs-slide-to="1"></button>
+                        <button type="button" title="Terceira imagem" data-bs-target="#carousel-images" data-bs-slide-to="2"></button>
+                        <button type="button" title="Quarta imagem" data-bs-target="#carousel-images" data-bs-slide-to="3"></button>
+                        <button type="button" title="Quinta imagem" data-bs-target="#carousel-images" data-bs-slide-to="4"></button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -158,7 +186,8 @@
             <div class="container banner d-block pt-5 pb-5">
                 <!--Content-->
                 <div class="container container-right-about mt-5 mb-3 text-center">
-                    <h2 class="motto text text-center h2 animation-up pt-4">Serviços que prestamos</h2>
+                    <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-2 mt-5">
+                    <h2 class="motto text text-center h2 animation-up pt-1">Serviços que prestamos</h2>
                     <p class="mx-5 text text center animation-up">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     </p>
@@ -171,7 +200,14 @@
                                 <img src="./src/img/service1.webp" class="card-icon mb-3" alt="Serviço oferecido" draggable="false">
                                 <h5 class="card-title text-center">Protocolos</h5>
                                 <p class="card-text text-center">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt modi laboriosam expedita accusamus sunt sint ab at quas reprehenderit. Veniam cupiditate quia molestias error hic?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quam non nisi dolorum vel 
+                                    veritatis, dolores, nesciunt eligendi magni sequi ab ducimus! Modi reprehenderit quidem, 
+                                    harum culpa tenetur autem veniam omnis delectus et rerum porro ad.
+                                </p><br>
+                                <p class="card-text text-center">
+                                    Culpa sint commodi eum 
+                                    atque perspiciatis adipisci sunt consectetur deserunt architecto a provident voluptas 
+                                    accusamus, ipsum enim nam incidunt.
                                 </p>
                             </div>
                         </div>
@@ -182,7 +218,14 @@
                                 <img src="./src/img/service2.webp" class="card-icon mb-3" alt="Serviço oferecido" draggable="false">
                                 <h5 class="card-title text-center">Registros</h5>
                                 <p class="card-text text-center">
-                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores nobis hic et laboriosam sed doloremque magni ipsum dolorem numquam. Nihil.
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eius perferendis 
+                                    quia molestiae ad in reiciendis magni maiores totam dicta? Aspernatur ducimus vero ad 
+                                    nobis natus eos dolores laboriosam iure dolorum blanditiis.
+                                </p><br>
+                                <p class="card-text text-center">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sint commodi eum 
+                                    atque perspiciatis adipisci sunt consectetur deserunt architecto a provident voluptas 
+                                    accusamus, ipsum enim nam incidunt.
                                 </p>
                             </div>
                         </div>
@@ -193,7 +236,14 @@
                                 <img src="./src/img/service3.webp" class="card-icon mb-3" alt="Serviço oferecido" draggable="false">
                                 <h5 class="card-title text-center">Autenticação</h5>
                                 <p class="card-text text-center">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, est voluptate. Quae dignissimos eum atque maxime aut asperiores eveniet. Aperiam, nulla possimus.
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sint commodi eum 
+                                    atque perspiciatis adipisci sunt consectetur deserunt architecto a provident voluptas 
+                                    accusamus, ipsum enim nam incidunt.
+                                </p><br>
+                                <p class="card-text text-center">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa sint commodi eum 
+                                    atque perspiciatis adipisci sunt consectetur deserunt architecto a provident voluptas 
+                                    accusamus, ipsum enim nam incidunt.
                                 </p>
                             </div>
                         </div>
@@ -217,6 +267,7 @@
                 </div>
                 <!--Content-->
                 <div class="container container-right-about mt-5 mb-5">
+                    <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern-2" draggable="false" class="pb-1 mb-2">
                     <h2 class="motto text text-center h2 animation-up">Conheça o Titular do <br>Cartório Ribeirão da Ilha</h2>
                     <p class="mx-5 text text center animation-up">
                             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit optio, modi rerum amet incidunt numquam hic ipsa praesentium ullam quis? 
@@ -236,8 +287,9 @@
                     <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
                 </svg>
             </div>
-            <div class="container banner d-block animation-up">
-                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Mídias</h2>
+            <div class="container banner d-flex flex-column animation-up">
+                <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
+                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Mídias e Avisos</h2>
                 <p class="text text-center animation-down">
                     Confira alguns vídeos de passo a passo que você pode achar útil.<br>
                     Você pode encontrar mais conteúdo seguindo o Cartório Ribeirão da Ilha no 
@@ -299,11 +351,11 @@
             <!--Left Content-->
             <div class="container banner d-sm-block d-md-block d-lg-flex">
                 <div class="container d-flex flex-column container-hero-left animation-up">
-                    <img src="./src/img/howto-1.webp" alt="Ícone de ajuda" id="brand-logo-3" draggable="false" class="pb-1 pt-1 mb-1 mt-5">
+                    <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-1 mt-5">
                     <h2 class="motto mx-5 text text-center h2">Como nos encontrar?</h2>
                     <p class="mx-5 text text-center">
                         Veja como entrar em contato com o Cartório Ribeirão da Ilha.<br><br>
-                        <ul>
+                        <ul class="contact-ul">
                             <li>
                                 Através do nosso <a href="https://api.whatsapp.com/send/?phone=%2B554833643902&text&type=phone_number&app_absent=0" target="_blank" class="text-reset links-socials">Whatsapp</a>.
                             </li><br>
@@ -311,13 +363,14 @@
                                 Endereço físico: Rua João Sallum, 215, Florianópolis-SC, CEP:88047-668. <br>
                                 Atendimento: De segunda a sexta, das 09:00h às 18:00h.
                             </li>
+                            <!--Google Map Embed-->
                             <iframe class="embed-map pt-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d858.2851375794489!2d-48.529812585951305!3d-27.66354335016585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273a462e54d99b%3A0x3bbaffe3a161fd04!2sClerk%20of%20Ribeir%C3%A3o%20da%20Ilha!5e0!3m2!1sen!2sbr!4v1740027912930!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <br>
                         </ul>
                     </p>
                 </div>
                 <!--Right Content-->
-                <div class="container mt-5">
+                <div class="container mt-3">
                     <form class="mx-0 form mx-auto animation-down" id="contact-form">
                         <ul>
                             <li>
@@ -400,6 +453,7 @@
                 </svg>
             </div>
             <div class="container banner d-block animation-up">
+                <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern-2" draggable="false" class="pb-1 mb-3 mt-5">
                 <h2 class="motto h2 text text-center animation-down" id="faq-h2">Perguntas Frequentes</h2>
                 <p class="text text-center pb-3 animation-down">
                     Tem alguma dúvida? Veja as perguntas frequentes.
@@ -467,7 +521,7 @@
     </div>
 
     <!--FOOTER SECTION-->
-    <footer class="text-center text-lg-start bg-body-tertiary text-muted footer-body">
+    <footer id="footer" class="text-center text-lg-start bg-body-tertiary text-muted footer-body">
         <section class="d-flex justify-content-center justify-content-lg-between p-3 border-bottom" id="info">
             <div class="me-5 d-none d-lg-block mt-1">
                 <span>Siga-nos nas redes sociais ou entre em contato via Whatsapp:</span>
@@ -548,7 +602,7 @@
         </section>
         <!-- Copyright -->
         <div class="text-center p-1" id="footer-foot-note" style="background-color: var(--color-background-footer);">
-            <span>© 2025 Cartório Ribeirão da Ilha</span>
+            <span>© 2025 Cartório Ribeirão da Ilha, todos os direitos reservados.</span>
         </div>
     </footer>
 
