--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <div class="container banner d-sm-block d-md-flex d-lg-flex pt-5 pb-5">
                 <!--Image-->
                 <div class="container d-flex flex-column container-hero-left mt-5 pt-5 mb-5">
-                    <img src="./src/img/titular.png" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-about-left">
+                    <img src="./src/img/titular.png" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-fluid img-about-left">
                 </div>
                 <!--Content-->
                 <div class="container container-right-about mt-5 mb-5">
@@ -602,7 +602,7 @@
         </section>
         <!-- Copyright -->
         <div class="text-center p-1" id="footer-foot-note" style="background-color: var(--color-background-footer);">
-            <span>© 2025 Cartório Ribeirão da Ilha, todos os direitos reservados.</span>
+            <span>© 2025 Cartório Ribeirão da Ilha. Todos os direitos reservados.</span>
         </div>
     </footer>
 
