--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="#">
-    <meta property="og:image" content="#" />
-    <meta property="og:image:width" content="505" />
-    <meta property="og:image:height" content="459" />
+    <meta name="description" content="Cartório - Tabelionato e RCPN">
+    <meta property="og:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true"/>
+    <meta property="og:image:width" content="469"/>
+    <meta property="og:image:height" content="468"/>
 
     <title>Cartório Ribeirão da Ilha</title>
     <link rel="icon" href="favicon.png">
@@ -27,9 +27,9 @@
             "@type": "Organization",
             "name": "Cartório Ribeirão da Ilha",
             "url": "https://www.cartorioribeirao.com.br/",
-            "logo": "https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/logo.png?raw=true",
-            "image": "#",
-            "description": "#",
+            "logo": "https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true",
+            "image": "https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage.png?raw=true",
+            "description": "Cartório - Tabelionato e RCPN",
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "Rua João Sallum, 215",
@@ -53,9 +53,6 @@
             publicKey: "kGPFPWjqp-T9f7Dml", 
             });
         })();
-
-    </script>
-    <!-- Google tag (gtag.js) -->
     </script>
     <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA" /> <!--Google Search Console verification for indexing-->
 </head>
