--- a/index.html
+++ b/index.html
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" content="Cartório - Tabelionato e RCPN">
+    <title>Cartório Ribeirão da Ilha</title>
+    <meta name="description" content="Cartório Ribeirão da Ilha - Tabelionato e RCPN em Florianópolis-SC">
     <meta property="og:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true"/>
     <meta property="og:image:width" content="469"/>
     <meta property="og:image:height" content="468"/>
-
-    <title>Cartório Ribeirão da Ilha</title>
+    <meta name="keywords" content="cartório, protocolo, notificações judiciais, serviços cartorários, documentos, protestos">
     <link rel="icon" href="favicon.png">
+    <meta itemprop="name" content="Cartório Ribeirão da Ilha">
+    <meta itemprop="description" content="Soluções cartorárias rápidas, transparentes e seguras.">
+    <meta itemprop="image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (Facebook, WhatsApp) -->
+    <meta property="og:title" content="Cartório Ribeirão da Ilha">
+    <meta property="og:description" content="Soluções cartorárias rápidas, transparentes e seguras.">
+    <meta property="og:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage.png?raw=true">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.cartorioribeirao.com.br">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true">
+    <meta name="twitter:title" content="Cartório Ribeirão da Ilha - Tabelionato e RCPN em Florianópolis-SC">
+    <meta name="twitter:description" content="Soluções cartorárias rápidas, transparentes e seguras.">
+    <meta name="twitter:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage.png?raw=true">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -54,7 +71,8 @@
             });
         })();
     </script>
-    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA" /> <!--Google Search Console verification for indexing-->
+    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> <!--Google Search Console verification for indexing-->
+    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> <!--Google Search Console verification for indexing https://-->
 </head>
 
 <body>
