fixed hero image w/svh for mobile screen

--- a/index.html
+++ b/index.html
@@ -8,19 +8,25 @@
     <meta property="og:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true"/>
     <meta property="og:image:width" content="469"/>
     <meta property="og:image:height" content="468"/>
-    <meta name="keywords" content="cartório, protocolo, notificações judiciais, serviços cartorários, documentos, protestos">
+    <meta name="keywords" content="cartório, escrivania de paz, notificações extrajudiciais, serviços cartorários, documentos, escritura">
     <link rel="icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="canonical" href="https://cartorioribeirao.com.br/">
     <meta itemprop="name" content="Cartório Ribeirão da Ilha">
     <meta itemprop="description" content="Soluções cartorárias rápidas, transparentes e seguras.">
     <meta itemprop="image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true">
     <meta name="robots" content="index, follow">
+    <meta name="reply-to" content="cartorioribeirao@cartorioribeirao.com.br">
+    <meta name="author" content="Jean Justen - www.jeanjusten.com">
+    
 
     <!-- Open Graph (Facebook, WhatsApp) -->
-    <meta property="og:title" content="Cartório Ribeirão da Ilha">
+    <meta property="og:title" content="Cartório Ribeirão da Ilha - Escrivania de Paz">
     <meta property="og:description" content="Soluções cartorárias rápidas, transparentes e seguras.">
     <meta property="og:image" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage.png?raw=true">
-    <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.cartorioribeirao.com.br">
+    <meta property="site_name" content="cartorioribeirao">
+    <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="https://github.com/jeanjusten/Cartorio_Ribeirao_Ilha/blob/main/src/img/ogimage2.png?raw=true">
@@ -72,7 +78,6 @@
         })();
     </script>
     <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> <!--Google Search Console verification for indexing-->
-    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> <!--Google Search Console verification for indexing https://-->
 </head>
 
 <body>
