added events and registry section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="container d-flex flex-column container-hero-left animation-up motto-div">
                     <img src="./src/img/logofullwebp.webp" draggable="false" alt="Logo do Cartório Ribeirão da Ilha" class="mx-5 mt-5 mb-3 logo-hero-section">
                     <h2 class="motto mx-5 text h2">Tradição, Inovação e Excelência em Atendimento.</h2>
-                    <p class="mx-5 p-hero">
+                    <p class="mx-5 p-hero d-sm-none d-lg-block">
                         Desde 1851 unindo inovação e excelência para oferecer serviços notariais e de registro civil 
                         com agilidade, transparência e segurança jurídica.
                     </p>
@@ -597,7 +597,7 @@
             </div>
             <div class="container banner d-flex flex-column animation-up">
                 <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
-                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Mídias e Avisos</h2>
+                <h2 class="motto h2 text text-center animation-down" id="faq-h2">Eventos, Equipe e Atividades</h2>
                 <p class="text text-center animation-down">
                     Você pode encontrar mais conteúdo seguindo o Cartório Ribeirão da Ilha no 
                     <a href="https://www.instagram.com/cartorioribeiraodailha/" target="_blank" class="text-reset links-socials">Instagram</a>.
@@ -628,6 +628,10 @@
                         </div>
                     </div>
                 </div>
+                <h2 class="motto h2 text text-center animation-down mt-5" id="faq-h2">Direito Notarial e Registral</h2>
+                <p class="text text-center animation-down">
+                    Aqui você encontra informações relevantes sobre o cartório, registros, notificações e muito mais!
+                </p>
                 <!--Reels Section-->
                 <div class="mb-5 mt-1">
                     <div class="row">
