--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                         <strong>Daniel Rosa de Almeida</strong>
                         é Tabelião e Registrador Civil da Escrivania de Paz do Distrito do Ribeirão da Ilha, em Florianópolis/SC. 
                         Com mais de 20 anos de experiência no Direito Civil, Empresarial e Imobiliário, é mestre pela UFF e possui 
-                        três pós-graduações, incluindo Direito Notarial e Registral. Atuou como gestor público e concluiu MBA em Gestão 
+                        três pós-graduações, incluindo Direito Notarial e Registral.<br><br>Atuou como gestor público e concluiu MBA em Gestão 
                         de Negócios pelo IBMEC. Reconhecido por sua capacidade técnica e de gestão, alia tradição jurídica à inovação, 
                         oferecendo serviços modernos, seguros e de excelência à população.
                     </p>
@@ -839,7 +839,7 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                            Quais são os documentos necessários para lavrar uma escritura de divórcio?
+                            Quais são os documentos necessários para lavrar uma escritura de Casamento Civil?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
