modified ''about'' section carousel

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     Venha conhecer nossos serviços e descubra por que somos referência em Florianópolis!
                 </p>
                 <div class="pt-5 d-block">
-                    <h3 class="text text-start">Tabelionato de Notas</h3>
+                    <h3 class="text text-start h3-yellow">Tabelionato de Notas</h3>
                     <p class="text text-start">
                         Oferecemos serviços notariais que garantem a segurança jurídica, prevenindo litígios e 
                         assegurando autenticidade e validade aos atos praticados.
@@ -382,10 +382,7 @@
                 </div>
                 <!--Second Service type-->
                 <div class="pt-5 d-block">
-                    <h3 class="text text-start">Registro Civil das Pessoas Naturais</h3>
-                    <p class="text text-start">
-                        Essenciais para a cidadania e direitos civis, garantindo que os atos da vida sejam formalmente reconhecidos:
-                    </p>
+                    <h3 class="text text-start h3-yellow">Registro Civil das Pessoas Naturais</h3>
                 </div>
                 <!-- Cards Carousel -->
                 <div id="carouselCards2" class="carousel slide">
@@ -839,13 +836,13 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                            Quais são os documentos necessários para lavrar uma escritura de Casamento Civil?
+                            Quais são os valores e documentos necessários para realizar um Casamento Civil?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                             <div class="accordion-body">
                                 <a href="./src/files/ESCRITURA PÚBLICA DE CASAMENTO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download target="_blank">
-                                    Clique aqui para ver a documentação necessária.
+                                    Clique aqui para ver a documentação necessária e valores.
                                 </a>
                             </div>
                         </div>
