added favicon 32x32px

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                             <div class="accordion-body">
-                                <a href="./src/files/ESCRITURA PÚBLICA DE CASAMENTO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download target="_blank">
+                                <a href="./src/files/CASAMENTO-INFORMAÇÕES-COM-FORMULÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download target="_blank">
                                     Clique aqui para ver a documentação necessária e valores.
                                 </a>
                             </div>
