--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-8Rf8hXJscZ3d3O7EZ5ayE4To7yZcmMX1w4cYFhnWnE7cDGa/yX+/G+WxfzL0X/NE" crossorigin="anonymous">
     <link rel="stylesheet" href="./Lib/bootstrap.min.css">
     <link rel="stylesheet" href="./build/style.css">
-    <!--
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    -->
-    
+    <!--Google Search Console verification for indexing-->
+    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> 
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-981547297"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-981547297'); </script> 
+    <!-- Event snippet for Visualização de página conversion page --> 
+    <script> gtag('event', 'conversion', {'send_to': 'AW-981547297/1oQfCN6gyrQaEKHyhNQD'}); </script> 
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -70,19 +72,6 @@
             }
         }
     </script>
-
-    <!--
-    <script type="text/javascript">
-        (function() {
-        // https://dashboard.emailjs.com/admin/account
-        emailjs.init({
-            publicKey: "kGPFPWjqp-T9f7Dml", 
-            });
-        })();
-    </script>
-    -->
-
-    <meta name="google-site-verification" content="O1jk24t6nxUg6FOCfTsOAuq5dMUKX3pxgdnHPDeekAA"/> <!--Google Search Console verification for indexing-->
 </head>
 
 <body>
