added google tag for google ads

--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
             }
         }
     </script>
+    <!--Google Ads-->
+    <script>
+            gtag('event', 'conversion', {'send_to': 'AW-981547297/XaygCMPC7bkaEKHyhNQD'});
+    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-981547297"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());  
+        gtag('config', 'AW-981547297');
+    </script>
+    </script>
         <!-- Forced redirect to HTTPS + WWW -->
         <script>
             if (location.protocol !== 'https:' || !location.hostname.startsWith('www.')) {
@@ -79,7 +91,6 @@
             window.location.replace(httpsUrl);
             }
         </script>
-
 </head>
 
 <body>
