added google tag

--- a/index.html
+++ b/index.html
@@ -71,26 +71,27 @@
             }
         }
     </script>
+    <!-- Forced redirect to HTTPS + WWW -->
+    <script>
+        if (location.protocol !== 'https:' || !location.hostname.startsWith('www.')) {
+        const host = 'www.cartorioribeirao.com.br';
+        const httpsUrl = 'https://' + host + location.pathname + location.search;
+        window.location.replace(httpsUrl);
+        }
+    </script>
     <!--Google Ads-->
     <script>
-            gtag('event', 'conversion', {'send_to': 'AW-981547297/XaygCMPC7bkaEKHyhNQD'});
+        gtag('event', 'conversion', {'send_to': 'AW-981547297/XaygCMPC7bkaEKHyhNQD'});
     </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-981547297"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-981547297">
+    </script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());  
-        gtag('config', 'AW-981547297');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-981547297');
     </script>
-    </script>
-        <!-- Forced redirect to HTTPS + WWW -->
-        <script>
-            if (location.protocol !== 'https:' || !location.hostname.startsWith('www.')) {
-            const host = 'www.cartorioribeirao.com.br';
-            const httpsUrl = 'https://' + host + location.pathname + location.search;
-            window.location.replace(httpsUrl);
-            }
-        </script>
 </head>
 
 <body>
