changed owner photo

--- a/index.html
+++ b/index.html
@@ -504,22 +504,25 @@
                 <div id="carousel-images" class="carousel carousel-fade slide" data-bs-ride="carousel">
                     <div class="carousel-inner" id="carousel-about">
                         <div data-bs-interval="4500" class="carousel-item active">
-                            <img class="d-block w-100 image-carousel1" src="./src/img/carousel1.webp" loading="lazy" alt="Fachada do Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel1" src="./src/img/carousel1.webp" alt="Fachada do Cartório Ribeirão da Ilha" draggable="false">
                         </div>
                         <div data-bs-interval="4500" class="carousel-item">
-                            <img class="d-block w-100 image-carousel2" src="./src/img/carousel2.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel2" src="./src/img/carousel2.webp" alt="Daniel Rosa de Almeida" draggable="false">
                         </div>
                         <div data-bs-interval="4500" class="carousel-item">
-                            <img class="d-block w-100 image-carousel3" src="./src/img/carousel3.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel3" src="./src/img/carousel3.webp" alt="Cartório Ribeirão da Ilha" draggable="false">
                         </div>
                         <div data-bs-interval="4500" class="carousel-item">
-                            <img class="d-block w-100 image-carousel4" src="./src/img/carousel4.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel4" src="./src/img/carousel4.webp" alt="Cartório Ribeirão da Ilha" draggable="false">
                         </div>
                         <div data-bs-interval="4500" class="carousel-item">
-                            <img class="d-block w-100 image-carousel5" src="./src/img/carousel5.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel5" src="./src/img/carousel5.webp" alt="Cartório Ribeirão da Ilha" draggable="false">
                         </div>
                         <div data-bs-interval="4500" class="carousel-item">
-                            <img class="d-block w-100 image-carousel5" src="./src/img/carousel6.webp" loading="lazy" alt="Cartório Ribeirão da Ilha" draggable="false">
+                            <img class="d-block w-100 image-carousel6" src="./src/img/carousel6.webp" alt="Cartório Ribeirão da Ilha" draggable="false">
+                        </div>
+                        <div data-bs-interval="4500" class="carousel-item">
+                            <img class="d-block w-100 image-carousel7" src="./src/img/carousel7.webp" alt="Cartório Ribeirão da Ilha" draggable="false">
                         </div>
                     </div>
                     <div class="carousel-indicators">
@@ -529,6 +532,7 @@
                         <button type="button" title="Quarta imagem" data-bs-target="#carousel-images" data-bs-slide-to="3"></button>
                         <button type="button" title="Quinta imagem" data-bs-target="#carousel-images" data-bs-slide-to="4"></button>
                         <button type="button" title="Sexta imagem" data-bs-target="#carousel-images" data-bs-slide-to="5"></button>
+                        <button type="button" title="Sexta imagem" data-bs-target="#carousel-images" data-bs-slide-to="6"></button>
                     </div>
                 </div>
             </div>
@@ -545,7 +549,7 @@
             <div class="container banner d-sm-block d-md-flex d-lg-flex pt-5 pb-5">
                 <!--Image-->
                 <div class="container d-flex flex-column container-hero-left mt-5 pt-5 mb-5">
-                    <img src="./src/img/titular.png" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-fluid img-about-left">
+                    <img src="./src/img/titular.webp" draggable="false" alt="Daniel Rosa, Titular do Cartório" class="img-fluid img-about-left">
                 </div>
                 <!--Content-->
                 <div class="container container-right-about mt-5 mb-5">
@@ -742,7 +746,7 @@
                                 Email: cartorioribeirao@cartorioribeirao.com.br
                             </li>
                             <!--Google Map Embed-->
-                            <iframe class="embed-map pt-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d858.2851375794489!2d-48.529812585951305!3d-27.66354335016585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273a462e54d99b%3A0x3bbaffe3a161fd04!2sClerk%20of%20Ribeir%C3%A3o%20da%20Ilha!5e0!3m2!1sen!2sbr!4v1740027912930!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe class="embed-map pt-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d858.2851375794489!2d-48.529812585951305!3d-27.66354335016585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273a462e54d99b%3A0x3bbaffe3a161fd04!2sClerk%20of%20Ribeir%C3%A3o%20da%20Ilha!5e0!3m2!1sen!2sbr!4v1740027912930!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <br>
                         </ul>
                     </p>
@@ -754,7 +758,6 @@
                         <input type="hidden" name="_subject" value="Nova mensagem do seu site Cartorio Ribeirão da Ilha">
                         <input type="hidden" name="_captcha" value="false">
                         <input type="hidden" name="_template" value="table">
-
                         <p class="text text-start">
                             Preencha o formulário com sua mensagem.<br>
                             Retornaremos o mais rápido possível.
