added more media to carousel

--- a/index.html
+++ b/index.html
@@ -585,11 +585,11 @@
                 <!--Feed Section-->
                 <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active" data-bs-interval="5000">
+                        <div class="carousel-item active carousel-insta" data-bs-interval="5000">
                             <div class="d-flex justify-content-between">
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/feedback6.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                                 <div class="card-carousel">
@@ -604,7 +604,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item carousel-insta">
                             <div class="d-flex justify-content-between">
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
