Added feedback images

--- a/index.html
+++ b/index.html
@@ -716,6 +716,30 @@
                         </div>
                         -->
                     </div>
+                </div>
+                <h2 class="motto h2 text text-center animation-down mt-5" id="faq-h2">Feedback</h2>
+                <p class="text text-center animation-down">
+                    Veja os feedbacks recentes de nossos clientes.
+                </p>
+                <!--Reels Section-->
+                <div class="mt-1">
+                    <div class="row d-flex justify-content-center gap-3 feedback-container mx-auto">
+                        <div class="col-12">
+                            <img src="./src/img/feedback_1.webp" class="feedback-img img-fluid" draggable="false" alt="feedback do cartório Ribeirão da Ilha">
+                        </div>
+                        <div class="col-12">
+                            <img src="./src/img/feedback_2.webp" class="feedback-img img-fluid" draggable="false" alt="feedback do cartório Ribeirão da Ilha">
+                        </div>
+                        <div class="col-12">
+                            <img src="./src/img/feedback_3.webp" class="feedback-img img-fluid" draggable="false" alt="feedback do cartório Ribeirão da Ilha">
+                        </div>
+                        <!--
+                        <div class="col-12">
+                            <img src="./src/img/feedback_4.webp" class="feedback-img img-fluid" draggable="false" alt="feedback do cartório Ribeirão da Ilha">
+                        </div>
+                        -->
+                    </div>
+                </div>
             </div>
         </section>
 
