monthly maitenance adding content

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                 </div>
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/feedback4.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                             </div>
@@ -608,7 +608,7 @@
                             <div class="d-flex justify-content-between">
                                 <div class="card-carousel">
                                     <div class="card-carousel-body">
-                                        <img src="./src/img/feedback4.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                        <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
                                     </div>
                                 </div>
                                 <div class="card-carousel">
@@ -659,14 +659,14 @@
                             </a>
                         </div>
                         <div class="d-none d-lg-block col-lg-4 pt-3">
-                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
+                            <a href="https://www.instagram.com/p/DKZdU2vuI2F/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
                                     <div class="card-body">
-                                        <video src="./src/video/media3.mp4" loop muted playsinline controls poster="./src/img/poster3.webp"
+                                        <video src="./src/video/media6.mp4" loop muted playsinline controls poster="./src/img/poster6.png"
                                             type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
                                         </video>
-                                        <h5 class="card-title text-center title-reels">Escritura Pública de compra e venda de Bens e Imóveis</h5>
+                                        <h5 class="card-title text-center title-reels">Direito Notarial e Registral no Brasil</h5>
                                     </div>
                                 </div>
                             </a>
@@ -696,6 +696,19 @@
                                             type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
                                         </video>
                                         <h5 class="card-title text-center title-reels">Como regularizar um Imóvel sem Inventário</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="d-none d-lg-block col-lg-4 pt-3">
+                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
+                                <div class="card">
+                                    <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
+                                    <div class="card-body">
+                                        <video src="./src/video/media3.mp4" loop muted playsinline controls poster="./src/img/poster3.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        </video>
+                                        <h5 class="card-title text-center title-reels">Escritura Pública de compra e venda de Bens e Imóveis</h5>
                                     </div>
                                 </div>
                             </a>
