added Cafe Entre Escrituras Video ep2

--- a/index.html
+++ b/index.html
@@ -730,11 +730,29 @@
                         -->
                     </div>
                 </div>
+                <!--CEE Section-->
+                <h2 class="motto h2 text text-center animation-down mt-5" id="faq-h2">Café Entre Escrituras</h2>
+                <p class="text text-center animation-down">
+                    Assista aos episódios do Café Entre Escrituras.
+                </p>
+                <div class="mb-5 mt-1 pb-1 container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-lg-12 pt-3">
+                            <!--Responsive Embed-->
+                            <div class="ratio ratio-16x9">
+                                <iframe src="https://www.youtube.com/embed/ot5EzSVoTto"
+                                title="Episódio 2. Café entre Escrituras –  Advogados Dr. Jefferson e Dra. Leila Sbardella"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                allowfullscreen loading="lazy"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <h2 class="motto h2 text text-center animation-down mt-5" id="faq-h2">Feedback</h2>
                 <p class="text text-center animation-down">
                     Veja os feedbacks recentes de nossos clientes.
                 </p>
-                <!--Reels Section-->
+                <!--Feedback Section-->
                 <div class="mt-1">
                     <div class="row d-flex justify-content-center gap-3 feedback-container mx-auto">
                         <div class="col-12">
@@ -782,10 +800,12 @@
                             <li>
                                 Email: cartorioribeirao@cartorioribeirao.com.br
                             </li>
-                            <!--Google Map Embed-->
-                            <iframe class="embed-map pt-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d858.2851375794489!2d-48.529812585951305!3d-27.66354335016585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273a462e54d99b%3A0x3bbaffe3a161fd04!2sClerk%20of%20Ribeir%C3%A3o%20da%20Ilha!5e0!3m2!1sen!2sbr!4v1740027912930!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
                             <br>
                         </ul>
+                        <!--Google Map Embed-->
+                        <div>
+                            <iframe class="embed-map pt-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d858.2851375794489!2d-48.529812585951305!3d-27.66354335016585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95273a462e54d99b%3A0x3bbaffe3a161fd04!2sClerk%20of%20Ribeir%C3%A3o%20da%20Ilha!5e0!3m2!1sen!2sbr!4v1740027912930!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                     </p>
                 </div>
                 <!--Right Content-->
