--- a/index.html
+++ b/index.html
@@ -579,69 +579,9 @@
                 <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
                 <h2 class="motto h2 text text-center animation-down" id="faq-h2">Casamento Coletivo</h2>
                 <p class="text text-center animation-down">
-                    Você pode encontrar mais conteúdo seguindo o Cartório Ribeirão da Ilha no
+                    <a href="./src/pages/form.html" target="_blank" class="text-reset links-socials">Clique aqui para fazer o seu cadastro no Casamento Comunitário.</a>
                 </p>
-
-                <!--Colective Wedding Form-->
-                <div class="container-wedding-form text-center d-flex flex-column align-items-center mb-3">
-                    <h2>Cadastro</h2>
-                    <form action="processa.php" method="post" enctype="multipart/form-data">
-
-                    <label for="nome">Nome Completo:</label>
-                    <input type="text" id="nome" name="nome" required>
-
-                    <label for="endereco">Endereço:</label>
-                    <input type="text" id="endereco" name="endereco" required>
-
-                    <label for="identidade">Documento de Identidade:</label>
-                    <input type="text" id="identidade" name="identidade" required>
-
-                    <label for="cpf">CPF:</label>
-                    <input type="text" id="cpf" name="cpf" required>
-
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone" name="telefone" required>
-
-                    <label for="whatsapp">WhatsApp:</label>
-                    <input type="text" id="whatsapp" name="whatsapp">
-
-                    <label for="regime">Regime de Bens:</label>
-                    <select id="regime" name="regime" required>
-                        <option value="">Selecione</option>
-                        <option value="comunhao_parcial">Comunhão Parcial</option>
-                        <option value="comunhao_universal">Comunhão Universal</option>
-                        <option value="separacao_total">Separação Total</option>
-                    </select>
-
-                    <p class="mt-5 input-padding">Identidade e CPF:</p>
-                    <input type="file" name="doc_identidade_cpf" accept=".pdf,.jpg,.jpeg,.png" required>
-
-                    <p class="input-padding">Comprovante de Residência:</p>
-                    <input type="file" name="doc_residencia" accept=".pdf,.jpg,.jpeg,.png" required>
-
-                    <p class="input-padding">Certidão de nascimento ou casamento:</p>
-                    <input type="file" name="doc_certidao" accept=".pdf,.jpg,.jpeg,.png" required>
-
-                    <p class="input-padding">Documentos das duas testemunhas:</p>
-                    <input type="file" name="doc_testemunhas[]" accept=".pdf,.jpg,.jpeg,.png" multiple required>
-
-
-                    <!--Booking-->
-                    <label for="agendamento" class="mb-2 pt-3">Agendamento de Horário no Cartório:</label>
-                    <input type="time" id="agendamento" name="agendamento" min="09:00" max="14:00" required>
-                    <small class="small-note">* Escolha um horário entre 9h e 14h.</small>
-
-                    <div class="note">
-                        * É obrigatório comparecer ao Cartório Ribeirão da Ilha para entregar os documentos e realizar a habilitação após a inscrição online.
-                    </div>
-
-                    <button class="btn btn-send btn-primary btn-block shadow-sm mt-3 send-wedding-form-btn" type="submit">Enviar Inscrição</button>
-                    </form>
-
-                    <div class="note">
-                    ** Para se inscrever, também é necessário procurar o Cartório Ribeirão da Ilha e dar entrada no processo de habilitação dentro do prazo legal.
-                    </div>
-                </div>
+                
 
                 <!--Media-->
                 <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-3 mt-5">
@@ -741,7 +681,7 @@
                         </div>
                     </div>
 
-                    <div class="row d-flex flex-row justify-content-evenly">
+                    <div class="row d-none flex-row justify-content-evenly">
                         <div class="col-6 col-lg-4 pt-3">
                             <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DGQOyqMsopJ/" target="blank" class="card-anchor">
                                 <div class="card">
